Auth fixes, group selection, etcetera

--- a/algobowl/templates/index.xhtml
+++ b/algobowl/templates/index.xhtml
@@ -10,9 +10,9 @@
         <hr />
         <div class="compete-link text-center">
           <h4 class="font-weight-light">Are you enrolled?</h4>
-          <a class="btn btn-primary btn-lg" href="/competitions/auto" role="button">
+          <a class="btn btn-primary btn-lg" href="${tg.url('/group')}" role="button">
             <i class="fas fa-users fa-lg"></i>
-            Click Here to Compete
+            Enter the Competition
           </a>
         </div>
       </div>
