--- a/algobowl/templates/master.xhtml
+++ b/algobowl/templates/master.xhtml
@@ -72,7 +72,7 @@
                 <i class="fas fa-user-secret fa-fw"></i>
                 Admin
               </a>
-              <a class="dropdown-item" href="${tg.url('logout')}">
+              <a class="dropdown-item" href="${tg.url('/logout')}">
                 <i class="fas fa-sign-out-alt fa-fw"></i>
                 Logout
               </a>
