--- a/algobowl/templates/master.xhtml
+++ b/algobowl/templates/master.xhtml
@@ -99,15 +99,20 @@
 
   <!-- Footer -->
   <footer class="footer">
-    <div class="container">
-      AlgoBOWL is
-      <a href="https://github.com/jackrosenthal/algobowl" target="_blank">
-        open source software</a> designed by
-      <a href="http://inside.mines.edu/~jrosenth" target="_blank">
-        Jack Rosenthal</a> released under an
-      <a href="https://en.wikipedia.org/wiki/MIT_License" target="_blank">
-        MIT License</a>.
-      <i class="fas fa-heart"></i>
+    <div class="container footer-vertical-centering">
+      <div class="text-center">
+        <p>
+          AlgoBOWL is
+          <a href="https://github.com/jackrosenthal/algobowl" target="_blank">
+            open source software</a> designed by
+          <a href="http://inside.mines.edu/~jrosenth" target="_blank">
+            Jack Rosenthal</a> released under an
+          <a href="https://en.wikipedia.org/wiki/MIT_License" target="_blank">
+            MIT License</a>.
+        </p>
+        <i class="fas fa-heart fa-lg"></i>
+        <i class="fab fa-python fa-lg"></i>
+      </div>
     </div>
   </footer>
 
