Add competition selection, and information to homepage

--- a/algobowl/templates/index.xhtml
+++ b/algobowl/templates/index.xhtml
@@ -16,6 +16,97 @@
           </a>
         </div>
       </div>
+      <h1>How it Works</h1>
+      <p>
+        Students are placed in groups and receive an NP-hard problem. They
+        are asked to design a good heuristic to the problem, create an
+        input to the problem, and a program which, given an input and output,
+        will verify if the output is a valid solution to the input.
+      </p>
+      <div class="row">
+        <div class="col-md">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">
+                Stage 1: Input Upload
+              </h5>
+              <i class="fas fa-file-upload fa-fw fa-4x fa-pull-left"></i>
+              <p class="card-text">
+                Groups upload their inputs to the problem and select a team name.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">
+                Stage 2: Output Upload
+              </h5>
+              <p class="card-text">
+                <i class="fas fa-cogs fa-fw fa-4x fa-pull-left"></i>
+                Groups run all inputs on their solution program and upload
+                their outputs to the site.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">
+                Stage 3: Verification
+              </h5>
+              <p class="card-text">
+                <i class="fas fa-check fa-fw fa-4x fa-pull-left"></i>
+                Groups verify that each solution to their input from all other
+                groups is valid.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <p class="mt-sm-3">
+        If one group rejects another group's output, the rejected group will
+        have 24-hours to either upload a new output, or protest the
+        rejection. If the new output is accepted by the professor, they will
+        get to keep it, but it will cost a penalty point.
+      </p>
+
+      <p>
+        After this 24-hour period, the following stages open:
+      </p>
+      <div class="row">
+        <div class="col-md">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">
+                Stage 4: Open Verification
+              </h5>
+              <p class="card-text">
+                <i class="fas fa-check-double fa-fw fa-4x fa-pull-left"></i>
+                All outputs for all inputs become available. Some teams may wish
+                to run their verifier on their verifier to ensure there were no
+                false-positive verifications.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">
+                Stage 5: Evaluation
+              </h5>
+              <p class="card-text">
+                <i class="fas fa-sliders-h fa-fw fa-4x fa-pull-left"></i>
+                Groups submit evaluations of their teammates effort
+                contributions to be considered in their grade.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
