--- a/algobowl/templates/group/input_upload.xhtml
+++ b/algobowl/templates/group/input_upload.xhtml
@@ -1,4 +1,23 @@
 <div class="input-upload-stage" py:if="competition.input_upload_open">
   <h1>Input Upload</h1>
-  Let's get started!
+  <p>
+    Welcome to AlgoBOWL! Let's get started. You will have until
+    ${h.ftime(competition.input_upload_ends)} to submit your input
+    and decide upon a team name.
+  </p>
+  <form method="POST" action="${tg.request.url}/input_upload" enctype="multipart/form-data">
+    <div class="form-group">
+      <label for="input-upload">Input Upload</label>
+      <input type="file" class="form-control-file" id="input-upload" name="input_upload" />
+    </div>
+    <div class="form-group">
+      <label for="team-name">Team Name</label>
+      <input type="text" class="form-control" id="team-name" name="team_name" />
+      <small class="form-text text-muted">
+        Please avoid names with offensive content, profanity, or are hard to pronounce.
+        Your instructor reserves the right to change your team name.
+      </small>
+    </div>
+    <button type="submit" class="btn btn-primary">Submit</button>
+  </form>
 </div>
