--- a/algobowl/templates/index.xhtml
+++ b/algobowl/templates/index.xhtml
@@ -86,7 +86,7 @@
               <p class="card-text">
                 <i class="fas fa-check-double fa-fw fa-4x fa-pull-left"></i>
                 All outputs for all inputs become available. Some teams may wish
-                to run their verifier on their verifier to ensure there were no
+                to run their verifier on the outputs to ensure there were no
                 false-positive verifications.
               </p>
             </div>
