--- a/algobowl/templates/master.xhtml
+++ b/algobowl/templates/master.xhtml
@@ -27,6 +27,9 @@
   <link rel="shortcut icon" href="${tg.url('/assets/img/favicon.ico')}" />
   <!-- End Favicons -->
 
+  <script src="${tg.url('/assets/js/jquery-3.3.1.min.js')}"></script>
+  <script src="${tg.url('/assets/js/bootstrap.min.js')}"></script>
+
   <py:block name="head"></py:block>
 </head>
 
@@ -122,8 +125,5 @@
       </div>
     </div>
   </footer>
-
-  <script src="${tg.url('/assets/js/jquery-3.3.1.slim.min.js')}"></script>
-  <script src="${tg.url('/assets/js/bootstrap.min.js')}"></script>
 </body>
 </html>
