New model and new resolution stage

--- a/algobowl/templates/group/evaluation.xhtml
+++ b/algobowl/templates/group/evaluation.xhtml
@@ -1,4 +1,4 @@
-<div class="input-upload-stage" py:if="competition.verification_open">
-  <h1>Input Upload</h1>
+<div class="input-upload-stage" py:if="competition.evaluation_open">
+  <h1>Evaluation</h1>
   Let's get started!
 </div>
