--- a/algobowl/templates/group/index.xhtml
+++ b/algobowl/templates/group/index.xhtml
@@ -3,29 +3,36 @@
     Group Home
   </py:block>
   <body py:block="body" py:strip="True">
-    <div class="container">
 <?python
-pv = 0
-stage = 'Inactive'
-for st, open in (('Input Upload', competition.input_upload_open),
-                 ('Output Upload', competition.output_upload_open),
-                 ('Verification', competition.verification_open),
-                 ('Resolution', competition.resolution_open),
-                 ('Evaluation', competition.evaluation_open)):
-    pv += 20
-    if open:
-        stage = st
-        break
-else:
-    pv = 0
+import datetime
+now = datetime.datetime.now()
+show_rankings = competition.output_upload_begins <= now
 ?>
-      <div class="card bg-light competition-info">
-        <div class="card-header" py:content="competition.name" />
+    <div class="container">
+      <div class="card competition-info mb-3">
         <div class="card-body">
-          <div class="card-title"><b>Current Stage: </b>${stage}</div>
-          <div class="progress">
-            <div class="progress-bar" role="progressbar" style="width: ${pv}%" aria-valuenow="${pv}" aria-valuemin="0" aria-valuemax="100"></div>
-          </div>
+          <h2 class="card-title" py:content="competition.name"></h2>
+          <ul>
+            <li><strong>Input Upload:</strong> ${h.ftime(competition.input_upload_begins, competition.input_upload_ends)}</li>
+            <li><strong>Output Upload:</strong> ${h.ftime(competition.output_upload_begins, competition.output_upload_ends)}</li>
+            <li><strong>Verification:</strong> ${h.ftime(competition.verification_begins, competition.verification_ends)}</li>
+            <li><strong>Resolution:</strong> ${h.ftime(competition.resolution_begins, competition.resolution_ends)}</li>
+            <li><strong>Open Verification:</strong> ${h.ftime(competition.open_verification_begins, competition.open_verification_ends)}</li>
+            <li><strong>Evaluation:</strong> ${h.ftime(competition.evaluation_begins, competition.evaluation_ends)}</li>
+          </ul>
+        </div>
+        <div class="card-footer">
+          <a href="${competition.problem_statement.url}"
+             class="btn btn-info">
+            <i class="fas fa-file-pdf fa-fw"></i>
+            Problem Statement
+          </a>
+          <a href="${tg.url('/competition/{}'.format(competition.id))}"
+             class="btn btn-info"
+             py:if="show_rankings">
+            <i class="fas fa-trophy fa-fw"></i>
+            View Rankings
+          </a>
         </div>
       </div>
       <py:include href="algobowl.templates.group.input_upload" />
