ground truth toggle on admin rankings page

--- a/algobowl/public/assets/css/style.css
+++ b/algobowl/public/assets/css/style.css
@@ -70,3 +70,10 @@ body {
   margin-top: 8px;
   font-size: 22px;
 }
+
+.truncate-small {
+  max-width: 230px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
