--- a/algobowl/templates/group/select.xhtml
+++ b/algobowl/templates/group/select.xhtml
@@ -15,7 +15,7 @@
              class="list-group-item"
              href="${tg.url('/group/{}'.format(group.id))}">
              <h4>${group.competition.name}: ${group.name}</h4>
-             <p>${', '.join(map(repr, group.users))}</p>
+             <span>${', '.join(map(repr, group.users))}</span>
           </a>
         </div>
       </py:if><py:else>
