Fix screwy ordering in the rankings table

--- a/algobowl/templates/competition/rankings.xhtml
+++ b/algobowl/templates/competition/rankings.xhtml
@@ -62,7 +62,7 @@
             <td py:content="ent.sum_of_ranks"></td>
             <td py:content="ent.penalties"></td>
             <td>
-              ${ent.place} (${ent.score})
+              ${ent.place} (${ent.reject_count}/${ent.score})
             </td>
           </tr>
         </tbody>
