scrolling rankings table

--- a/algobowl/templates/competition/rankings.xhtml
+++ b/algobowl/templates/competition/rankings.xhtml
@@ -61,7 +61,7 @@ def cell_color(iput, ent):
         </div>
       </div>
 
-      <table class="table table-striped">
+      <table class="table table-striped table-responsive rankings-table">
         <thead>
           <tr>
             <th>Group</th>
