Change color of waiting to grey

--- a/algobowl/templates/competition/rankings.xhtml
+++ b/algobowl/templates/competition/rankings.xhtml
@@ -12,7 +12,7 @@ def cell_color(iput, ent):
     return {
         VerificationStatus.accepted: "bg-success text-light",
         VerificationStatus.rejected: "bg-danger text-light",
-        VerificationStatus.waiting: "",
+        VerificationStatus.waiting: "bg-secondary text-light",
     }[ent.input_ranks[iput].verification]
     ?>
 
