--- a/algobowl/templates/competition/rankings.xhtml
+++ b/algobowl/templates/competition/rankings.xhtml
@@ -29,7 +29,7 @@ def tooltip_attrs(iput, ent):
     return {}
     ?>
 
-    <div class="container-fluid">
+    <div class="container">
       <h1 class="mb-3">
         Rankings: ${competition.name}
         <py:if test="ground_truth">
@@ -73,8 +73,9 @@ def tooltip_attrs(iput, ent):
           </a>
         </div>
       </div>
-
-      <table class="table table-striped table-responsive rankings-table">
+    </div>
+    <div class="container-fluid table-responsive">
+      <table class="table table-striped rankings-table">
         <thead>
           <tr>
             <th>Group</th>
