New open verification interface

--- a/algobowl/templates/competition/rankings.xhtml
+++ b/algobowl/templates/competition/rankings.xhtml
@@ -51,26 +51,17 @@ def tooltip_attrs(iput, ent):
           View Student Verifications
         </a>
       </div>
-      <div py:if="ov_groups" class="card mt-3 mb-3">
+      <div py:if="open_verification" class="card mt-3 mb-3">
         <div class="card-body">
           <h4 class="card-title">
             Open Verification is Active
           </h4>
           <p class="card-text">
             Click on any output to download and run against your verifier.
-            If you believe there to be a verification error, use the link
-            below to submit a protest. Incorrect protests will count as one
+            If you believe there to be a verification error, use the linked
+            page to submit a protest. Incorrect protests will count as one
             penalty against your group.
           </p>
-          <a py:for="gid in ov_groups"
-             href="${tg.url('/group/{}/ov_protest'.format(gid))}"
-             class="btn btn-primary mr-2">
-            <i class="far fa-thumbs-down fa-fw"></i>
-            Submit Protest
-            <py:if test="len(ov_groups) > 2">
-              (Group ${gid})
-            </py:if>
-          </a>
         </div>
       </div>
     </div>
@@ -100,11 +91,11 @@ def tooltip_attrs(iput, ent):
                     <py:if test="st.verification.name == 'rejected'">
                       R
                     </py:if><py:else>
-                    ${st.rank}
+                      ${st.rank}
                     </py:else>
                   </py:def>
                   <a py:if="st.output"
-                     href="${st.output.data.url}"
+                     href="${request.url}/ov/${st.output.id}"
                      class="table-download-link"
                      py:content="cell_text(st)" />
                   <span py:if="not st.output"
